--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
             <ul
               class="player-btn-wrap flex space-between align-items-center w75 no-list-style"
             >
-              <li>
+              <li id="btnRandom">
                 <a href="#" class="fff-color"> <i class="fas fa-random"></i></a>
               </li>
               <li>
