tutta i pulsanti su player funzionanti meno volume

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 />Installa app
               </a>
               <!-- linea (horizontal rule) tra istalla e avatar profilo -->
-              <div class="line h1px w100 grey-color-bg border-rad2 my-11"></div>
+              <div class="line h1px w80 grey-color-bg border-rad2 my-11"></div>
               <!-- avatar e nome profilo -->
               <a href="#" class="in-line-b w100 pos-rel"
                 ><div
@@ -647,10 +647,10 @@
               <li id="btnRandom">
                 <a href="#" class="fff-color"> <i class="fas fa-random"></i></a>
               </li>
-              <li>
+              <li id="btnIndietro">
                 <a href="#" class="fff-color">
                   <i class="fas fa-caret-left font-s1e5rem pos-rel">
-                    <!-- linea vertivale a sx del sinbolo per mandare indietro il brano -->
+                    <!-- linea verticale a sx del sinbolo per mandare indietro il brano -->
                     <span
                       class="in-line-b pos-abs w3px h14px fff-color-bg"
                     ></span> </i
@@ -672,7 +672,7 @@
                     <i id="pause" class="fas fa-pause"></i></div
                 ></a>
               </li>
-              <li>
+              <li id="btnAvanti">
                 <a href="#" class="fff-color">
                   <i class="fas fa-caret-right font-s1e5rem pos-rel">
                     <!-- linea vertivale a dx del sinbolo per mandare avanti il brano -->
@@ -681,7 +681,7 @@
                     ></span> </i
                 ></a>
               </li>
-              <li>
+              <li id="btnRedo">
                 <a href="#" class="fff-color">
                   <i class="fas fa-redo-alt"></i>
                 </a>
@@ -698,7 +698,7 @@
             <div class="time-bar h4px w60 grey-color-bg border-rad5">
               <!-- scorrimento -->
               <div
-                class="pos-rel grey-scorrimento-color-bg h100 hover-brand-color-bg border-rad5"
+                class="scorrimento-tempo pos-rel grey-scorrimento-color-bg h100 hover-brand-color-bg border-rad5"
                 id="scorrimentoTempo"
               >
                 <div
