comportamento hover come barra spotify orginale

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                 id="scorrimentoTempo"
               >
                 <div
-                  class="pallino tempo pos-abs h13px w13px light-grey-color-bg border-rad50"
+                  class="pallino tempo pos-abs h13px w13px light-grey-color-bg border-rad50 opacity0"
                 ></div>
               </div>
             </div>
